--- a/index.html
+++ b/index.html
@@ -14,24 +14,302 @@
 	<style>
 		body  { font:16px Arial,"DejaVu Sans",sans-serif; }
 		label { display:block; text-align:right; position:relative; }
-		.full { width:800px; margin:0 auto; }
-		input, textarea { width:80%; vertical-align:middle; border:1px solid silver; margin:0.25em 0; padding:0.125em; font:16px Arial,"DejaVu Sans",sans-serif; }
-		.box  { display:inline-block; width:80%; text-align:left; border:1px solid silver; vertical-align:middle; margin:0.25em 0; padding:0.125em; }
+		.full { width:800px; }
+		input, textarea { width:78%; vertical-align:middle; border:1px solid silver; margin:0.25em 0; padding:0.125em; font:16px Arial,"DejaVu Sans",sans-serif; }
+		.box  { display:inline-block; width:78%; text-align:left; border:1px solid silver; vertical-align:middle; margin:0.25em 0; padding:0.125em; }
 		.tall { min-height:6em; }
 		small { font-size:70%; }
 		input.validationElement, textarea.validationElement { border-color:pink; box-shadow:red 0 0 4px -2px; }
 		.validationMessage { position:absolute; color:red; margin:0.5em; white-space:nowrap; }
-		.un1 { float:left; margin:0; width:16.66%; }
-		.un2 { float:left; margin:0; width:33.33%; }
-		.un3 { float:left; margin:0; width:50%; }
-		.un4 { float:left; margin:0; width:66.66%; }
-		.un5 { float:left; margin:0; width:83.33%; }
-		.un6 { float:left; margin:0; width:100%; }
+		.un1 { float:left; margin:0; padding:0.5em; width:16%; }
+		.un2 { float:left; margin:0; padding:0.5em; width:32%; }
+		.un3 { float:left; margin:0; padding:0.5em; width:48%; }
+		.un4 { float:left; margin:0; padding:0.5em; width:64%; }
+		.un5 { float:left; margin:0; padding:0.5em; width:80%; }
+		.un6 { float:left; margin:0; padding:0.5em; width:96%; }
+		.clearfix::after { content:''; display:table; clear:both; }
+		.clear { clear:both; }
+		.next-btn { float:right; }
+		.hidden { display:none; }
 	</style>
 </head>
 <body>
 
-<section id=character_creation class=full data-bind=if:true>
+	<template id=text_edit>
+		<label for=cc_{{name}} data-bind=validationElement:value>
+			{{label}}: <input id=cc_{{name}} textInput={{value}} />
+		</label>
+	</template>
+	<template id=text_view>
+		<label>{{label}}: <span class=box>{{value}}</span></label>
+	</template>
+
+	<template id=longtext_edit>
+		<label for=cc_{{name}} data-bind=validationElement:value>
+			{{label}}: <textarea id=cc_{{name}} class=tall textInput={{value}} rows=4></textarea>
+		</label>
+	</template>
+	<template id=longtext_view>
+		<label>{{label}}: <span class="box tall">{{value}}</span></label>
+	</template>
+
+	<template id=array_edit>
+	</template>
+	<template id=array_view>
+		{{#foreach: value}}
+		<label>
+			{{#if: $parent.label[$index()] }}<small>{{$parent.label[$index()]}}:</small> {{/if}}
+			<span class=box>{{$data}}</span>
+		</label>
+		{{/foreach}}
+	</template>
+
+	<template id=heading_view>
+		<h3>{{label}}</h3>
+	</template>
+
+	<template id=wizard>
+		<!--ko with:currentPage-->
+		<div class=clearfix data-bind=foreach:steps>
+			<div class="clearfix {{divClass}}">
+				{{#foreach: fields}}
+					{{#template type + (editable() ? '_edit' : '_view') /}}
+				{{/foreach}}
+				<div class=clear data-bind=ifnot:complete>
+					<button class=next-btn data-bind=click:$root.next>Next</button>
+				</div>
+			</div>
+		</div>
+		<!--/ko-->
+	</template>
+
+	<section id=character_creation class=full data-bind=template:{name:'wizard'}></section>
+
+	<script>
+		/*
+		 * Utils
+		 */
+		function splitProperty(property) {
+			return property.split(/\]?\[|\]?\.|\]/).filter(function(e) { return e })
+		}
+		function getProperty(obj, property) {
+			if (property instanceof Array) {
+				if (property.length === 0) {
+					return obj
+				}
+				if (property.length == 1) {
+					return obj[property[0]]
+				}
+				return getProperty(obj[property.shift()], property)
+			} else {
+				return getProperty(obj, splitProperty(property))
+			}
+		}
+		function setProperty(obj, property, value) {
+			property = splitProperty(property)
+			if (property.length > 0) {
+				var key = property.pop()
+				getProperty(obj, property)[key] = value
+			}
+		}
+
+		/*
+		 * KO initialization
+		 */
+		ko.validation.init({ decorateInputElement:true })
+		ko.validation.rules.nonEmpty = {
+			validator : function(value) { return value && value.trim().length },
+			message : 'The value should not be empty.'
+		}
+		ko.validation.registerExtenders()
+
+		/*
+		 * Dials & References
+		 */
+		var ladder = {
+			{ value : -1, label : 'Poor' },
+			{ value : -2, label : 'Terrible' },
+			{ value : 0, label : 'Mediocre' },
+			{ value : 1, label : 'Average' },
+			{ value : 2, label : 'Fair' },
+			{ value : 3, label : 'Good' },
+			{ value : 4, label : 'Great' },
+			{ value : 5, label : 'Superb' },
+			{ value : 6, label : 'Fantastic' },
+			{ value : 7, label : 'Epic' },
+			{ value : 8, label : 'Legendary' }
+		}
+		var skills = ko.observableArray([
+			'Athletics',
+			'Burglary',
+			'Contacts',
+			'Crafts',
+			'Deceive',
+			'Drive',
+			'Empathy',
+			'Fight',
+			'Investigate',
+			'Lore',
+			'Notice',
+			'Physique',
+			'Provoke',
+			'Rapport',
+			'Resources',
+			'Shoot',
+			'Stealth',
+			'Will'
+		])
+		var skillCap = ko.observable(4)
+
+		/*
+		 * Custom objects
+		 */
+		function NonEmpty(message) {
+			this.nonEmpty = { message : message }
+		}
+
+		function Field(model, property, type, label, validation) {
+			this.model = model
+			this.type = type
+			this.label = label
+			this.name = ko.pureComputed(function() { return label.toLowerCase().replace(/\s+/g, '_') })
+
+			this.editable = ko.observable(false)
+			
+			var value = getProperty(model, property)
+			if (!value) {
+				setProperty(model, property, value = ko.observable())
+				this.editable(true)
+			}
+			if (validation) {
+				value.extend(validation)
+			}
+			this.value = value
+		}
+		function Skills(model) {
+			this.model = model
+			this.type = 'skills'
+			this.label = ko.pureComputed(function() {
+				var cap = skillCap() + 1
+				return ladder().filter(function(e) { return e.value > 0 && e.value <= cap })
+			})
+		}
+		function Heading(text) {
+			this.type = 'heading'
+			this.label = text
+			this.editable = function() { return false }
+		}
+
+		function Step(fields, divClass, heading) {
+			this.fields = fields
+			var errors = this.errors = ko.validation.group(fields.map(function(f) { return f.value }))
+			this.isValid = ko.computed(function() { return errors().length === 0 })
+
+			this.divClass = divClass
+			this.complete = ko.computed({
+				owner : this,
+				read : function() {
+					return this.fields.every(function(f) { return !f.editable() })
+				},
+				write : function(input) {
+					this.fields.forEach(function(f) { f.editable(!input) })
+				}
+			})
+		}
+
+		function Page(steps) {
+			this.steps = ko.observableArray()
+			this.waitingSteps = ko.observableArray(steps)
+			if (steps.length) {
+				this.steps.push( this.waitingSteps.shift() )
+			}
+			this.currentStep = ko.observable(0)
+			this.isDone = ko.computed(function() { return this.waitingSteps().length === 0 }, this)
+
+			var self = this
+			this.next = function() {
+				var curr = self.currentStep()
+				var step = self.steps()[curr]
+				if (step.isValid()) {
+					step.complete(true)
+					self.currentStep(curr + 1)
+					while (self.waitingSteps().length && step.complete()) {
+						self.steps.push( step = self.waitingSteps.shift() )
+					}
+				} else {
+					step.errors.showAllMessages()
+				}
+			}
+		}
+
+		function Wizard(pages, complete) {
+			this.pages = pages
+			this.currentPage = ko.observable(pages[0])
+			this.complete = complete
+
+			var self = this
+			this.next = function() {
+				var currPage = self.currentPage()
+				var isDone = currPage.isDone()
+				currPage.next()
+				if (isDone) {
+					var pages = self.pages
+					var next = pages.indexOf(currPage) + 1
+					if (pages.length > next) {
+						self.currentPage(pages[next])
+					} else {
+						typeof self.complete === 'function' && self.complete()
+					}
+				}
+			}
+		}
+
+		var character = { aspects : [], phases : [], refresh : ko.observable(3) }
+		var characterCreation = new Wizard([
+			new Page([
+				new Step([
+					new Field(character, 'aspects[0]', 'text', 'High Concept', new NonEmpty('A character must have a high concept!')),
+					new Field(character, 'aspects[1]', 'text', 'Trouble', new NonEmpty('A character must have a trouble!')),
+					new Field(character, 'name', 'text', 'Name', new NonEmpty('A character must have a name!'))
+				], 'un6'),
+				new Step([
+					new Field(character, 'phases[0]', 'longtext', 'Phase 1', new NonEmpty('Fill in with some interesting story detail...')),
+					new Field(character, 'aspects[2]', 'text', 'Aspect', new NonEmpty('Come on, try to come up with some aspect!'))
+				], 'un6'),
+				/*new Step([
+					new Field(character, 'phases[1]', 'longtext', 'Phase 2', new NonEmpty('Fill in with some interesting story detail...')),
+					new Field(character, 'aspects[3]', 'text', 'Aspect', new NonEmpty('Come on, try to come up with some aspect!'))
+				], 'un6'),
+				new Step([
+					new Field(character, 'phases[2]', 'longtext', 'Phase 3', new NonEmpty('Fill in with some interesting story detail...')),
+					new Field(character, 'aspects[4]', 'text', 'Aspect', new NonEmpty('Come on, try to come up with some aspect!'))
+				], 'un6')*/
+			]),
+			mainPage = new Page([
+				new Step([
+					new Field(character, 'name', 'text', 'Name'),
+					new Field(character, 'description', 'longtext', 'Description', new NonEmpty('Why not give your character a nice description?'))
+				], 'un5'),
+				new Step([
+					new Field(character, 'refresh', 'text', 'Refresh')
+				], 'un1 hidden'),
+				new Step([
+					new Heading('Aspects'),
+					new Field(character, 'aspects', 'array', ['High Concept', 'Trouble'])
+				], 'un3'),
+				new Step([
+					new Heading('Skills'),
+					new Skills(character)
+				], 'un3')
+			])
+		], function() {
+		})
+		ko.applyBindings(characterCreation, document.getElementById('character_creation'))
+
+		mainPage.currentStep.subscribe(function(newVal) { if (newVal == 4) $('#cc_refresh').parents('.hidden').show() })
+	</script>
+
+<!--section id=_character_creation class=full data-bind=if:true>
 	<template id=first_page>
 		<template id=basics_edit>
 			<label for=cc_high_concept data-bind=validationElement:character.highConcept>
@@ -69,11 +347,6 @@
 			<label>Aspect: <span class=box>{{phase.aspect}}</span></label>
 		</template>
 
-		<!--ko foreach:phases-->
-			<!--ko if:ord<=$parent.status()-->
-				<p data-bind=template:{name:template}></p>
-			<!--/ko-->
-		<!--/ko-->
 	</template>
 
 	<template id=main_page>
@@ -89,7 +362,6 @@
 			<template id=description_view>
 				<label>Description: <span class="box tall">{{character.description}}</span></label>
 			</template>
-			<!--ko template:{name:descriptionTemplate}--><!--/ko-->
 		</div>
 		<div class=un1 data-bind="if:status()>5">
 			<label>Refresh: <br><span class="box tall">{{character.refresh}}</span></label>
@@ -98,14 +370,22 @@
 			<h3>Aspects</h3>
 			<label><small>High concept:</small> <span class=box>{{character.highConcept}}</span></label>
 			<label><small>Trouble:</small> <span class=box>{{character.trouble}}</span></label>
-			<!--ko foreach:phases-->
+			{{#foreach: phases}}
 			<label><span class=box>{{phase.aspect}}</span></label>
-			<!--/ko-->
+			{{/foreach}}
+		</div>
+
+		<template id=skills_edit>
+			{{#foreach: skillRanks.slice(0).reverse()}}
+			{{label}} (+{{value}})
+			{{/foreach}}
+		</template>
+		<div class=un3 data-bind="if:status()>4">
+			<h3>Skills</h3>
 		</div>
 
 	</template>
 
-	<!--ko template:{name:page()+'_page'}--><!--/ko-->
 </section>
 
 <section id=character_sheet data-bind=if:false>
@@ -121,7 +401,7 @@
 	{{#foreach: [5,4,3,2,1]}}
 	+{{$data}}{{#foreach: [0,1,2,3,4]}}<input textInput={{$root.skills[$parent][$data]}} />{{/foreach}}<br>
 	{{/foreach}}
-</section>
+</section-->
 
 <section id=dragdrop data-bind=if:false>
 	{{#foreach: dragFrom}}
@@ -134,17 +414,7 @@
 
 <script type=application/javascript>
 
-ko.validation.init({
-	decorateInputElement:true
-})
-ko.validation.rules.nonEmpty = {
-	validator : function(value, enable) {
-			return value && value.trim().length
-		},
-	message : 'The value should not be empty.'
-}
-ko.validation.registerExtenders()
-
+/*
 var cc = {}
 cc.status = ko.observable(0)
 cc.page = ko.computed(function() {
@@ -235,22 +505,16 @@ cc.descriptionErrors = ko.validation.group(character.description)
 cc.descriptionOk = ko.computed(function() { return cc.descriptionErrors().length === 0 })
 cc.descriptionTemplate = ko.observable('description_edit')
 
-ko.applyBindings(cc, document.getElementById('character_creation'))
-
-var character = {
-	name : ko.observable(),
-	description : ko.observable(),
-	refresh : ko.observable(0),
-	aspects : ko.observableArray(new Array(5)),
-	skills : {
-			5 : [ko.observable(), ko.observable(), ko.observable(), ko.observable(), ko.observable()],
-			4 : [],
-			3 : [],
-			2 : [],
-			1 : []
-		}
-}
-ko.applyBindings(character, document.getElementById('character_sheet'))
+cc.skillRanks = ko.observableArray([
+	{ label : 'Average', value : 1 },
+	{ label : 'Fair', value : 2 },
+	{ label : 'Good', value : 3 },
+	{ label : 'Great', value : 4 },
+	{ label : 'Superb', value : 5 }
+])
+cc.skillsTemplate = ko.observable('skills_edit')
+*/
+//ko.applyBindings(cc, document.getElementById('character_creation'))
 
 var dragDrop = {
 	dragFrom : ko.observableArray(['Pier','Pom','Persec','Öa']),
